Fix layout issues

--- a/app/refinance/lender-preferences/LenderPreferences.css
+++ b/app/refinance/lender-preferences/LenderPreferences.css
@@ -1,5 +1,5 @@
 @media (max-width: 768px) {
-  .container .lender-container {
-    margin-bottom: 100px;
+  .lender-container {
+    margin-bottom: 125px;
   }
 }
